Comprehensive update: COCO format integration, testing framework, and documentation improvements

--- a/tests/requirements-dev.txt
+++ b/tests/requirements-dev.txt
@@ -1,10 +1,13 @@
-# Requirements for testing and development
-pytest==7.4.0
-pytest-cov==4.1.0
-tqdm==4.66.1
-matplotlib==3.7.2
-numpy>=1.21.0
-opencv-python>=4.5.5
-torch>=2.0.0
+# Test dependencies for Dr-SAM project
+pytest>=7.4.0
+pytest-cov>=4.1.0
+jsonschema>=4.19.0
+
+# Visualization dependencies
+opencv-python>=4.8.0
+numpy>=1.24.3
+matplotlib>=3.7.2
+
+# Other dependencies
 pillow>=10.0.0
 scikit-image>=0.20.0 
